--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -33,6 +33,8 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.1.1"
+    "customize-cra": "^1.0.0",
+    "prettier": "^2.1.1",
+    "react-app-rewired": "^2.1.6"
   }
 }
